FIXED INVOICE PRINT SCROLLBAR

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,8 @@ select {
         overflow: hidden !important;
     }
 
+    main { overflow: hidden!important; }
+
     #none-printable-invoice {
         display: none;
     }
